[gd_scene load_steps=6 format=3 uid="uid://djylft0fqgvih"]

[ext_resource type="Texture2D" uid="uid://crkda88h54kdi" path="res://assets/backgrounds/HUD.png" id="1_6c77k"]
[ext_resource type="Script" path="res://nodes/hud.gd" id="1_ed883"]

[sub_resource type="LabelSettings" id="LabelSettings_bq68f"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_j620j"]
font_size = 50
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wcs6c"]
font_size = 35
font_color = Color(0, 1, 0, 1)

[node name="HUD" type="Node2D"]
script = ExtResource("1_ed883")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 448.0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_6c77k")
expand_mode = 2

[node name="Control" type="Control" parent="TextureRect"]
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 200.0

[node name="Attack1" type="TextureRect" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 80.0
offset_top = 56.0
offset_right = 176.0
offset_bottom = 136.0
expand_mode = 2

[node name="Counter" type="Label" parent="TextureRect/Control/Attack1"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 99.0
offset_bottom = 88.0
text = "infinite"
label_settings = SubResource("LabelSettings_bq68f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Attack2" type="TextureRect" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 208.0
offset_top = 72.0
offset_right = 272.0
offset_bottom = 120.0
expand_mode = 2

[node name="Counter" type="Label" parent="TextureRect/Control/Attack2"]
layout_mode = 0
offset_top = 24.0
offset_right = 67.0
offset_bottom = 48.0
text = "infinite"
label_settings = SubResource("LabelSettings_bq68f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Attack3" type="TextureRect" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 296.0
offset_top = 72.0
offset_right = 352.0
offset_bottom = 120.0
expand_mode = 2

[node name="Counter" type="Label" parent="TextureRect/Control/Attack3"]
layout_mode = 0
offset_top = 24.0
offset_right = 67.0
offset_bottom = 48.0
text = "infinite"
label_settings = SubResource("LabelSettings_bq68f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthLabel" type="Label" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 504.0
offset_top = 32.0
offset_right = 648.0
offset_bottom = 152.0
text = "1/20"
label_settings = SubResource("LabelSettings_j620j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnLabel" type="Label" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 1000.0
offset_top = 24.0
offset_right = 1120.0
offset_bottom = 58.0
text = "TUrn 23"
label_settings = SubResource("LabelSettings_wcs6c")
horizontal_alignment = 1
vertical_alignment = 1
